# uair-raid-analytics

./: .env.example  .gitignore  README.md  README.uk.md  pyproject.toml
ai_conversations/: chatgpt_chat.md  codex_chat.md
data/reference/: alertsua_raions.csv
docs/: API.md  ARCHITECTURE.md  DATA_PIPELINE.md  FRONTEND.md  NEXT_STEPS_FOR_CODEX.md  PROBLEMS_AND_SOLUTIONS.md  PROJECT_CONTEXT.md
scripts/: normalize_geojson.py  sync_alertsua_raions.py  update_dataset.py
server/: __init__.py  config.py  database.py  main.py  models.py  regions.py  schemas.py
server/analytics/: metrics.py  raion_metrics.py
server/api/: routes.py
server/data/: __init__.py  alertsua_client.py  alertsua_reference.py  update_dataset.py
server/web/: routes.py
server/web/static/css/: app.css
server/web/static/geo/: ukraine_regions.geojson
server/web/static/js/: app.js  i18n.js  theme.js
server/web/templates/: help.html  index.html
server/workers/: alertsua_history_worker.py
uair_raid_analytics/: database.py  main.py  models.py  schemas.py
uair_raid_analytics/analytics/: __init__.py  metrics.py
uair_raid_analytics/api/: routes.py
uair_raid_analytics/data/: update_dataset.py
uair_raid_analytics/web/: routes.py
uair_raid_analytics/web/static/js/: app.js
uair_raid_analytics/web/templates/: index.html
