[project]
name = "uair-raid-analytics"
version = "0.1.0"
description = "Historical air raid alert analytics for Ukraine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
uair-update-dataset = "uair_raid_analytics.data.update_dataset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uair_raid_analytics"]
